--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -10,4 +10,5 @@ encoding//src/echoserver.py=utf-8
 encoding//src/firstfork.py=utf-8
 encoding//src/fristZombie.py=utf-8
 encoding//src/server1.py=utf-8
+encoding//src/zombiepoll.py=utf-8
 encoding//src/zombiesol.py=utf-8
